# maxredis

./: .gitignore  ANCHORED_SUMMARY.md  CMakeLists.txt  README.md  appendonly.aof
server/: CMakeLists.txt  command_log.cc  command_log.h  command_log_test.cc  command_registry.cc  command_registry.h  command_serializer.cc  command_serializer_test.cc  common_types.h  conn_context.cc  conn_context.h  db_slice.cc  db_slice.h  debugcmd.cc  dfly_main.cc  dragonfly_connection.cc  dragonfly_connection.h  main_service.cc  main_service.h  raft_engine.cc  raft_engine.h  raft_group.h  raft_group_test.cc  raft_node.cc  raft_node.h  raft_node_test.cc  raft_storage.cc  raft_storage.h  raft_storage_test.cc  raft_types.h  raft_types_test.cc  reply_builder.cc  reply_builder.h  snapshot_fiber.cc  snapshot_fiber.h  state_machine.cc  state_machine.h  state_serializer.cc  state_serializer_test.cc
server/persistence/: CMakeLists.txt  aof_writer.cc  aof_writer.h  aof_writer_test.cc  persistence_manager.cc  persistence_manager.h  snapshot_manager.cc  snapshot_manager.h  snapshot_manager_test.cc
server/protocol/: conn_context.cc  conn_context.h  memcache_parser.cc  memcache_parser_test.cc  redis_parser.cc  redis_parser_test.cc  reply_builder.cc  reply_builder.h  resp_expr.cc
server/raft/: append_entries_rpc.h  append_entries_rpc_test.cc  apply_progress.cc  apply_progress.h  command_encoder.cc  command_encoder.h  command_log.cc  command_log.h  crc32.h  election_timer.cc  election_timer.h  election_timer_test.cc  file_log_storage.cc  file_log_storage.h  file_log_storage_test.cc  heartbeat_rpc.h  heartbeat_rpc_test.cc  install_snapshot_rpc.h  install_snapshot_rpc_test.cc  local_transport.cc  local_transport.h  log_storage.h  log_storage_test.cc  manifest.cc  manifest.h  peer_manager.cc  peer_manager.h  raft_apply_recovery_test.cc  raft_engine.cc  raft_engine.h  raft_engine_test.cc  raft_group.cc  raft_group.h  raft_group_manager.cc  raft_group_manager.h  raft_integration_test.cc  raft_multi_group_test.cc  raft_node.cc  raft_node.h  raft_role_test.cc  (+37 more)
server/service/: command_registry.cc  command_registry.h  command_serializer.cc  command_serializer.h  command_serializer_test.cc  config_flags.cc  debugcmd.cc  debugcmd.h  dfly_main.cc  dragonfly_connection.cc  dragonfly_connection.h  dragonfly_listener.cc  dragonfly_listener.h  main_service.cc  main_service.h  snapshot_fiber.cc  state_serializer.cc  state_serializer.h  test_utils.cc  test_utils.h
server/state_machine/: kv_state_machine.cc  kv_state_machine.h  kv_state_machine_test.cc  state_machine.h
server/storage/: common_types.cc  db_slice.cc  db_slice.h  engine_shard_set.cc  engine_shard_set.h
(+17 files in other folders)
